--- a/style.css
+++ b/style.css
@@ -1,321 +1,147 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
 }
+
+/* Custom Properties, update these for your own design */
+
+:root {
+    --ff-primary: 'Source Sans Pro', sans-serif;
+    --ff-secondary: 'Source Code Pro', monospace;
+    
+    --fw-reg: 300;
+    --fw-bold: 900;
+    
+    --clr-light: #fff;
+    --clr-dark: #303030;
+    --clr-accent: #16e0bd;
+    
+    --fs-h1: 3rem;
+    --fs-h2: 2.25rem;
+    --fs-h3: 1.25rem;
+    --fs-body: 1rem;
+
+    --bs: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
+          0.125em 0.125em 0.25em rgba(0,0,0,.15);
+}
+
+@media (min-width: 800px) {
+    :root {
+        --fs-h1: 4.5rem;
+        --fs-h2: 3.75rem;
+        --fs-h3: 1.5rem;
+        --fs-body: 1.125rem;
+    }
+}
+
+/* General styles */
 
 body {
-  font-family: "Poppins", sans-serif;
+    background: var(--clr-light);
+    color: var(--clr-dark);
+    margin: 0;
+    font-family: var(--ff-primary);
+    font-size: var(--fs-body);
+    line-height: 1.6;
 }
 
-.container {
-  min-height: 100vh;
-  width: 100%;
-  background-color: #485461;
-  background-image: linear-gradient(135deg, #485461 0%, #28313b 74%);
-  overflow-x: hidden;
-  transform-style: preserve-3d;
+section {
+  padding: 5em 2em;
 }
 
-.navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 10;
-  height: 3rem;
+img {
+    display: block;
+    max-width: 100%;
 }
 
-.menu {
-  max-width: 72rem;
-  width: 100%;
-  margin: 0 auto;
-  padding: 0 2rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: #fff;
+strong { font-weight: var(--fw-bold) }
+
+/* Typography */
+
+h1,
+h2,
+h3 {
+    line-height: 1.1;
+    margin: 0;
 }
 
-.logo {
-  font-size: 1.1rem;
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  line-height: 4rem;
+h1 { font-size: var(--fs-h1) }
+h2 { font-size: var(--fs-h2) }
+h3 { font-size: var(--fs-h3) }
+
+
+.section__title {
+    margin-bottom: .25em;
 }
 
-.logo span {
-  font-weight: 300;
+.section__title--intro {
+    font-weight: var(--fw-reg);
 }
 
-.hamburger-menu {
-  height: 4rem;
-  width: 3rem;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
+.section__title--intro strong {
+    display: block;
 }
 
-.bar {
-  width: 1.9rem;
-  height: 1.5px;
-  border-radius: 2px;
-  background-color: #eee;
-  transition: 0.5s;
+.section__subtitle {
+    margin: 0;
+    font-size: var(--fs-h3);
+}
+
+.section__subtitle--intro,
+.section__subtitle--about {
+    background: var(--clr-accent);
+    padding: .25em 1em;
+    font-family: var(--ff-secondary);
+    margin-bottom: 1em;
+}
+
+/* Header */
+
+nav {
+  display: none;
+}
+
+.intro__img {
+  box-shadow: var(--bs);
+}
+
+.intro {
   position: relative;
 }
 
-.bar:before,
-.bar:after {
-  content: "";
-  position: absolute;
-  width: inherit;
-  height: inherit;
-  background-color: #eee;
-  transition: 0.5s;
-}
-
-.bar:before {
-  transform: translateY(-9px);
-}
-
-.bar:after {
-  transform: translateY(9px);
-}
-
-.main {
-  position: relative;
-  width: 100%;
-  left: 0;
-  z-index: 5;
-  background-color: white;
-  overflow: hidden;
-  transform-origin: left;
-  transform-style: preserve-3d;
-  transition: 0.5s;
-}
-
-header {
-  min-height: 100vh;
-  width: 100%;
-  background: url("bg.jpg") no-repeat top center / cover;
-  position: relative;
-}
-
-.overlay {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-color: rgba(43, 51, 59, 0.8);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.inner {
-  max-width: 35rem;
-  text-align: center;
-  color: #fff;
-  padding: 0 2rem;
-}
-
-.title {
-  font-size: 2.7rem;
-}
-
-.btn {
-  margin-top: 1rem;
-  padding: 0.6rem 1.8rem;
-  background-color: #1197e7;
-  border: none;
-  border-radius: 25px;
-  color: #fff;
-  text-transform: uppercase;
-  cursor: pointer;
-  text-decoration: none;
-}
-
-.container.active .bar {
-  transform: rotate(360deg);
-  background: transparent;
-}
-
-.container.active .bar:before {
-  transform: translateY(0) rotate(45deg);
-}
-
-.container.active .bar:after {
-  transform: translateY(0) rotate(-45deg);
-}
-
-.container.active .main {
-  animation: main-animation 0.5s ease;
-  cursor: pointer;
-  transform: perspective(1300px) rotateY(20deg) translateZ(310px) scale(0.5);
-}
-
-@keyframes main-animation {
-  from {
-    transform: translate(0);
+@media (min-width: 600px) {
+  .intro {
+    display: grid;
+    width: min-content;
+    margin: 0;
+    grid-column-gap: 1em;
+    grid-template-areas:
+      "img title"
+      "img subtitle";
+    grid-template-columns: min-content max-content;
   }
 
-  to {
-    transform: perspective(1300px) rotateY(20deg) translateZ(310px) scale(0.5);
+  .intro__img {
+    grid-area: img;
+    min-width: 250px;
+    position: relative;
+    z-index: 2;
+  }
+
+  .section__subtitle--intro {
+    align-self: start;
+    grid-column: -1 / 1;
+    grid-row: 2;
+    text-align: right;
+    position: relative;
+    left: -1.5em;
+    width: calc(100% + 1.5em);
   }
 }
 
-.links {
-  position: absolute;
-  width: 30%;
-  right: 0;
-  top: 0;
-  height: 100vh;
-  z-index: 2;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
-ul {
-  list-style: none;
-}
 
-.links a {
-  text-decoration: none;
-  color: #eee;
-  padding: 0.7rem 0;
-  display: inline-block;
-  font-size: 1rem;
-  font-weight: 300;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  transition: 0.3s;
-  opacity: 0;
-  transform: translateY(10px);
-  animation: hide 0.5s forwards ease;
-}
 
-.links a:hover {
-  color: #fff;
-}
 
-.container.active .links a {
-  animation: appear 0.5s forwards ease var(--i);
-}
 
-@keyframes appear {
-  from {
-    opacity: 0;
-    transform: translateY(10px);
-  }
-
-  to {
-    opacity: 1;
-    transform: translateY(0px);
-  }
-}
-
-@keyframes hide {
-  from {
-    opacity: 1;
-    transform: translateY(0px);
-  }
-
-  to {
-    opacity: 0;
-    transform: translateY(10px);
-  }
-}
-
-.shadow {
-  position: absolute;
-  width: 100%;
-  height: 100vh;
-  top: 0;
-  left: 0;
-  background-color: white;
-  z-index: 10;
-  transform-style: preserve-3d;
-  transform-origin: left;
-  transition: 0.5s;
-}
-
-.shadow {
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    transform-style: preserve-3d;
-    transform-origin: left;
-    transition: 0.5s;
-    background-color: white;
-  }
-  
-  .shadow.one {
-    z-index: -1;
-    opacity: 0.15;
-  }
-  
-  .shadow.two {
-    z-index: -2;
-    opacity: 0.1;
-  }
-  
-  .container.active .shadow.one {
-    animation: shadow-one 0.6s ease-out;
-    transform: perspective(1300px) rotateY(20deg) translateZ(215px) scale(0.5);
-  }
-
-  @keyframes shadow-one {
-      0% {
-          transform: translate(0)
-      }
-
-      5% {
-        transform: perspective(1300px) rotateY(20deg) translateZ(310px) scale(0.5);
-      }
-
-      100% {
-        transform: perspective(1300px) rotateY(20deg) translateZ(215px) scale(0.5);
-      }
-  }
-
-  .container.active .shadow.two {
-    animation: shadow-two 0.6s ease-out;
-    transform: perspective(1300px) rotateY(20deg) translateZ(120px) scale(0.5);
-  }
-  
-  @keyframes shadow-two {
-    0% {
-      transform: translate(0);
-    }
-  
-    20% {
-      transform: perspective(1300px) rotateY(20deg) translateZ(310px) scale(0.5);
-    }
-  
-    100% {
-      transform: perspective(1300px) rotateY(20deg) translateZ(120px) scale(0.5);
-    }
-  }
-  
-  .container.active .main:hover + .shadow.one {
-    transform: perspective(1300px) rotateY(20deg) translateZ(230px) scale(0.5);
-  }
-  
-  .container.active .main:hover {
-    transform: perspective(1300px) rotateY(20deg) translateZ(340px) scale(0.5);
-  }
-
-  @media only screen and (max-width: 960px) {
-      .links {
-          transform: translate(-260px, 0px)
-      }
-  }
